crates/sourcepawn-studio/tests/text_document/goto_definition/snapshots/main__text_document__goto_definition__methodmaps__methodmap_destructor_1.snap
---
source: crates/sourcepawn-studio/tests/text_document/goto_definition/methodmaps.rs
assertion_line: 154
expression: "goto_definition(r#\"\n%! main.sp\nmethodmap Foo {\n    public ~Foo() {}\n             |\n             ^\n}\n\"#)"
---
[
  {
    "originSelectionRange": {
      "start": {
        "line": 1,
        "character": 12
      },
      "end": {
        "line": 1,
        "character": 15
      }
    },
    "targetUri": "file:///main.sp",
    "targetRange": {
      "start": {
        "line": 1,
        "character": 4
      },
      "end": {
        "line": 1,
        "character": 20
      }
    },
    "targetSelectionRange": {
      "start": {
        "line": 1,
        "character": 12
      },
      "end": {
        "line": 1,
        "character": 15
      }
    }
  }
]
