crates/sourcepawn-studio/tests/text_document/goto_definition/snapshots/main__text_document__goto_definition__methodmaps__methodmap_method_2.snap
---
source: crates/sourcepawn-studio/tests/text_document/goto_definition/methodmaps.rs
assertion_line: 46
expression: "goto_definition(r#\"\n%! main.sp\nmethodmap Foo {\n    public void Foo(int foo) {}\n                         |\n                         ^\n}\n\"#)"
---
[
  {
    "originSelectionRange": {
      "start": {
        "line": 1,
        "character": 24
      },
      "end": {
        "line": 1,
        "character": 27
      }
    },
    "targetUri": "file:///main.sp",
    "targetRange": {
      "start": {
        "line": 1,
        "character": 20
      },
      "end": {
        "line": 1,
        "character": 27
      }
    },
    "targetSelectionRange": {
      "start": {
        "line": 1,
        "character": 24
      },
      "end": {
        "line": 1,
        "character": 27
      }
    }
  }
]
